styles.css
:root{
    font-size: 13px;
}
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: Roboto, sans-serif;
}
html{
    scroll-padding-top: 130px;
    scroll-behavior: smooth;
}
body{
    width: 100%;
    display: flex;
    flex-direction: column;
}
#header-img{
    width: 200px;

}
#nav-bar{
    height: 100%;
    width: 40%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 100%;
}
.nav-link{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    font-size: 1.3rem;
    text-decoration: none;
    font-family:Arial, Helvetica, sans-serif;
    color: #42b549;
    font-weight: bold;
    border-radius: 4px;
}
.nav-link:hover{
    color: white;
    background-color: #39d443;
}
header{
    height: 100px;
    width: 100%;
    position : fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    padding: 0px 35px 0px 35px;
    align-items: center;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
    background-color: white;
    z-index: 1;
}
#content{
    display: flex;
    align-items: center;
    flex-direction: column;
    flex-wrap: wrap;
    width: 100%;
    padding-top: 130px;
}
li{
    list-style: none;
}
#email-wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center ;
}
#motto{
    text-align: center;
    font-family: 'Roboto Slab', serif;
    font-size: 2rem;
    padding-bottom: 20px;
    font-weight: bold;
}
form{
    width: max-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
input[type="email"]{
    width: 300px;
    height: 30px;
    margin-bottom: 10px;
    border-radius: 4px;
}
input[type="submit"]{
    margin-top: 10px;
    background-color: #42b549;
    width: 70%;
    height: 30px;
    border-radius: 4px;
    border:2px solid rgba(72, 255, 0, 0.5);
    color: white;
    font-size: 1rem;
}
input[type="submit"]:hover{
    color : #42b549;
    background-color: white;
}
.Grid-Container{
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(3,1fr);
    height: 700px;
    width: 100%;
    max-width: 1440px;
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px;
    row-gap: 5px;
}
i{
    font-size: 5rem;
    color: #42b549
}
.icon{
    display: flex;
    justify-content: center;
    align-items: center;
}
.grid-2{
    padding: 10px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: flex-start;

}
.title{
    width: 80%;
    font-family: Roboto;
    font-size: 2rem;
    font-weight: bold;
    padding-bottom: 5px;
}
.description{
    padding-top: 5px;
    width: 80%;
    max-width: 1440px;
    border-top: 4px solid #42b549;
    font-size: 1.2rem;
    font-family: 'Roboto Slab', serif;
    font-weight: lighter;
    line-height: 1.6;
} 
#Founder{
    margin-bottom: 50px;
    display: block;
}
iframe{
    width : 560px ;
    height : 315px;
} 
h1{ 
    text-align: center;
    font-size: 2.4rem;
    margin-bottom: 50px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: bold;
}
.product{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 20%;
    border: 1px solid #42b549;
    border-radius:5px;
    height: max-content;

}
.product-title{
    height: 80px;
    width: 100%;
    background-color: #39d443;
    display: flex;
    justify-content: center;
    font-family: 'Oswald', sans-serif;
    align-items: center;
    font-size: 2rem;
    color: white;
}
.price-list{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.motto{
    margin: 20px 0 10px 0;
    list-style: none;
    font-family: 'Roboto Slab', serif;
    font-size: 1.2rem;
    color: #338639;
}
#Gift-Card{
    display: flex;
    justify-content: center;
    gap: 5%;
    width: 100%;
    margin-bottom: 90px;
}
.button{
    width: 50%;
    height: 40px;
    margin : 20px 0 20px 0;
}
.product-link{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    color: white;
    background-color: #42b549;
}
.product-link:hover{
    color:#39d443;
    background-color: white;
    border: 1px solid #39d443;
    transform: scale(1.2
    );
}
footer{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 0px 20px 0px;
    height: 80px;
    color: #9FA6B0;
    border-top: 1px solid #9FA6B0;
    width: 100%;
}
.copyright{
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}
#foot-ul{
    display: flex;
    justify-content: space-around;
    width: max-content;
}
.foot-link{
    text-decoration: none;
    list-style: none;
    color: #9FA6B0;
    margin-right: 20px;
    padding-right: 20px ;
    border-right: 1px solid #9FA6B0;
}
#foot-ul li:last-child a{
    border-right: none;
}

#footer-logo{
    width: 50px;
    display: flex;
    align-items: center;
}

/* media break-point */
@media screen and (max-width : 2560px){
    :root{
        font-size: 18px;
    }
}
@media screen and (max-width: 1440px){
    :root{
        font-size: 13px;
    }
}
@media screen and (max-width: 1024px){
    #nav-bar{
        width: 50%;
    }
    iframe{
        width: 300px;
        height: 200px;
    }
    .product{
        width: 30%;
    }

}
@media  screen and (max-width : 768px){
    :root{
        font-size: 11px;
    }
    header{
        height: 80px;
    }
    #nav-bar{
        width: 60%;
    }
    .nav-link{
        font-size: 1.1rem;
    }
    .Grid-Container{
        height: 700px;
    }
    .product{
        width: 40%;
        height: 330px;
    }
    #header-img{
        width: 100px;
    }
    footer{
        height: 60px;
    }
    #foot-ul{
        flex-direction: column;
    }
    .foot-link{
        border-right: none;
    }
    #footer-logo{
        width: 35px;
    }
}

@media screen and (max-width : 425px){
    :root{
        font-size: 10px;
    }
    header{
        flex-direction: column;
        height: 95px;
    }
    #nav-bar{
        width: 70%;
    }
    iframe{
        width: 300px;
        height: 200px;
    }
    #Founder{
        margin-top: 50px;
    }
    h1{
        font-size: 2rem;
    }
}
@media screen and (max-width : 375px){
    :root{
        font-size: 9px
    };
    #nav-bar{
        width: 100%;
    }
    input[type="email"]{
        width: 230px;
        height: 23px;
    }
    input[type="submit"]{
        width: 50%;
        height: 25px;
    }
    #Grid-Container{
        height: 750px;
    }
    .product{
        width: 45%;
    }
}
@media screen and (max-width : 320px){
    h1{
        font-size: 1.7rem;
    }
    .product{
        height: 350px;
    }
    footer{
        height: 50px;
    }
}

